# Trajectory_Optimization_Derivative_Free

./: CMakeLists.txt  README.md  package.xml
docs/: Manual.tex  OptimizationAlgorithmMacros.sty
include/: ConfigParser.h  CostComp.h  CostComp.hpp  CostIneqComp.hpp  CsvWriter.h  InputParser.h  MatrixUtils.h  MatrixUtils.hpp  Pagmo_traj_optimization.hpp  PseudoInv_Solver.h  PseudoInv_Solver.hpp  PseudoUtils.hpp  Robot_mocap_opt_problem.h  Robot_mocap_opt_problem.hpp  TrajData.h  TrajData.hpp  XMLParser.h  opt_problem.hpp
src/: ConfigParser.cpp  CostComp.cpp  CostIneqComp.cpp  CsvWriter.cpp  InputParser.cpp  MatrixUtils.cpp  PseudoInv_Solver.cpp  PseudoUtils.cpp  Robot_mocap_opt_problem.cpp  TrajData.cpp  XMLParser.cpp  batch_solver.cpp  batch_solver_varseed.cpp  folderSolver_MultFrames.cpp  m20ia_pinv_opt.cpp  mocap_traj_problem.cpp  singleTraj_MultFrames_Solver.cpp  singleTraj_MultSeeds_Solver.cpp
