<?xml version="1.0"?>
<package format="2">
  <name>m20ia_pinv_opt</name>
  <version>0.0.3</version>
  <description>Gradient-free optimization of motion capture trajectory</description>

  <maintainer email="klevis.aliaj@utah.edu">Klevis</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>

</package>
